@@ -1,4 +1,4 @@
-12 Mar 2007: 0.3.8 Miek <miek@miek.nl>
+13 Mar 2007: 0.3.8 Miek <miek@miek.nl>
   -- minor bugfixes --
    * Add 'E:' to the known options in rdup-dump.in
    * Fix the +NUMBER argument in rdup-snapshot (reported by Joerg Rueppel)
@@ -8,6 +8,10 @@
    * Fix a bug in rdup-crypt (reported by David Martin)
    * Use 'warn' in rdup-gzip/crypt, echo a warning and continue
      when files fail to zip or crypt.
+   * rdup-dump, rdup-snapshot: -n path, changed semantics. If is
+     now a path prefix in stead of a file prefix
+   * documentation updates in the manpages of rdup-dump and
+     rdup-snapshot
 
 
 11 Feb 2007: 0.3.7 Miek <miek@miek.nl>
